--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+.card {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  background-color: #fff;
+  padding: 1rem;
+}
+
+label {
+  display: inline-block;
+  margin: 0.5rem;
+  font-size: 18px;
+  font-weight: 600;
+  color: #212529;
+}
+
