--- a/src/app/pages/primeng/primeng.component.html
+++ b/src/app/pages/primeng/primeng.component.html
@@ -1,9 +1,61 @@
-<h2>PrimeNG autocomplete example</h2>
+<h2 style="text-align: center;">PrimeNG autocomplete example</h2>
 
 <div class="card" style="width:80vw; margin: 0 auto;">
+    <label for="MessageTypes" class="font-bold mt-8 mb-2 block">Message types</label>
+    <div style="display: flex; align-items: center; gap: 16px;">
+        <div style="display: flex; align-items: center;">
+            <p-checkbox inputId="messageTypes1" name="METAR" value="METAR" [(ngModel)]="messageTypes"></p-checkbox>
+            <label for="messageTypes1" style="margin-left: 4px;">METAR</label>
+        </div>
+
+        <div style="display: flex; align-items: center;">
+            <p-checkbox inputId="messageTypes2" name="SIGMET" value="SIGMET" [(ngModel)]="messageTypes"></p-checkbox>
+            <label for="messageTypes2" style="margin-left: 4px;">SIGMET</label>
+        </div>
+
+        <div style="display: flex; align-items: center;">
+            <p-checkbox inputId="messageTypes3" name="TAF" value="TAF_LONGTAF" [(ngModel)]="messageTypes"></p-checkbox>
+            <label for="messageTypes3" style="margin-left: 4px;">TAF</label>
+        </div>
+    </div>
+
     <label for="Airports" class="font-bold mt-8 mb-2 block">Airports</label>
     <p-autocomplete [(ngModel)]="selectedAirports" inputId="Airports" multiple fluid [typeahead]="true" [suggestions]="suggestionsAirports" (completeMethod)="searchAirports($event)" (keydown)="onKeydownAirports($event)"/>
 
     <label for="Countries" class="font-bold mt-8 mb-2 block">Countries</label>
     <p-autocomplete [(ngModel)]="selectedCountries" inputId="Countries" multiple fluid [typeahead]="true" [suggestions]="suggestionsCountries" (completeMethod)="searchCountries($event)" (keydown)="onKeydownCountries($event)"/>
+
+    <div style="text-align: right; margin-top: 10px;">
+        <button style="margin: 20px;" (click)="UpdateTable()" [disabled]="messageTypes.length==0 || (selectedAirports.length==0 && selectedCountries.length == 0)">Create briefing</button>
+    </div>
 </div>
+
+<div *ngIf="errorMessage!=''" style="margin-top: 20px; text-align: center; color:red">{{errorMessage}}</div>
+
+<ng-container *ngIf="tableData | keyvalue as keyValues">
+  <p *ngIf="tableData!=null && keyValues.length === 0" style="margin-top: 20px; text-align: center;">No records returned.</p>
+</ng-container>
+
+<p-table #dt1 [value]="tableData | keyvalue" dataKey="key" [rows]="1000" [rowHover]="true" styleClass="p-datatable-gridlines" responsiveLayout="scroll" [style]="{ 'width':'80vw', 'margin': '20px auto' }">
+    <ng-template pTemplate="body" let-r>
+        <tr><td style="background-color: #F5F5F5; font-weight: bold;">{{r.key}}</td></tr>
+        <tr>
+            <td>
+                <p-table #dt2 [value]="r.value" dataKey="key" [rows]="1000" [rowHover]="true" styleClass="p-datatable-gridlines" responsiveLayout="scroll" [style]="{ 'margin': '0' }" >
+                    <ng-template pTemplate="body" let-v>
+                        <tr>
+                            <td style="width:200px">
+                                {{v.queryType}}
+                            </td>
+                            <td style="width:200px">
+                                {{v.reportTime | date:"dd. MM. yyyy hh:mm:ss"}}
+                            </td>
+                            <td [innerHTML]="v.textCustomHTML">
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
