--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,27 @@ label {
   color: #212529;
 }
 
+button {
+  background-color: #EEEEEE;
+  border: 1px solid silver;
+  color: black;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+button:hover:enabled {
+  background-color: #DDDDDD;
+}
+
+button:disabled {
+  background-color: #F5F5F5;
+  color: #AAAAAA;
+  border: 1px solid #CCCCCC;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+
