--- a/src/app/pages/standard/multi-input/multi-input.component.html
+++ b/src/app/pages/standard/multi-input/multi-input.component.html
@@ -1,7 +1,11 @@
-<div class="multi-input-container" style="width: 50%; min-height: 70px; position: relative; border: 1px solid silver;">
-    <span style="border: 1px solid gray;">xxxx</span>
-     <span style="border: 1px solid gray;">zzzz</span>
-    <input id="multiInput-{{id}}" type="text" style="position: absolute; left: 0; bottom: 0; width: 100%; padding: 5px; border: none; outline: none;" [placeholder]="placeholder" [attr.list]="'multiInputDatalist-' + id" />
+<div class="multi-input-container" style="width: 50%; min-height: 70px; position: relative; padding-top: 5px; border: 1px solid silver;">
+    <span *ngFor="let sv of selectedValues,index as i"  style="margin: 8px 5px; padding:2px 5px; border:1px solid silver;">
+        <!-- title="{{getTitle(sv)}}" -->
+        {{sv}}
+        <span style="cursor:pointer;" (click)="selectedValues.splice(i,1)">✖</span>
+    </span>
+
+    <input id="multiInput-{{id}}" type="text" style="position: absolute; left: 0; bottom: 0; width: 100%; padding: 5px; border: none; outline: none;" [placeholder]="placeholder" [attr.list]="'multiInputDatalist-' + id" (keydown)="onKeydown($event)" (input)="onInput($event)" />
 </div>
 
 <datalist id="multiInputDatalist-{{id}}" >
