--- a/src/app/pages/standard/standard.component.html
+++ b/src/app/pages/standard/standard.component.html
@@ -41,9 +41,9 @@
         <tr><td style="background-color: #F5F5F5; font-weight: bold; line-height: 40px;">{{data.key}}</td></tr>
         <tr>
             <td>
-                <table cellspacing="0" cellpadding="0">
+                <table cellspacing="0" cellpadding="0" style="margin: 5px 20px;">
                     <tr *ngFor="let v of GetDataValue(data.value)">
-                        <td style="width:200px">
+                        <td style="width:200px;line-height: 30px;">
                             {{v.queryType}}
                         </td>
                         <td style="width:200px">
