--- a/src/app/pages/standard/standard.component.html
+++ b/src/app/pages/standard/standard.component.html
@@ -1,4 +1,5 @@
-<h2 style="text-align: center;">Standard Angular component example</h2>
+<h2 class="PageHeader">Standard Angular component example </h2>
+<button style="position: absolute; top:10px; right:20px; cursor:pointer;" [routerLink]="['/Home']">X</button>
 
 <div class="card" style="width:80vw; margin: 0 auto;">
     <label for="MessageTypes" class="font-bold mt-8 mb-2 block">Message types</label>
@@ -36,9 +37,9 @@
   <p *ngIf="tableData!=null && keyValues.length === 0" style="margin-top: 20px; text-align: center;">No records returned.</p>
 </ng-container>
 
-<table cellspacing="0" cellpadding="0" style="width:80vw; margin: 20px auto;">
+<table cellspacing="0" cellpadding="0" style="width:80vw; margin: 20px auto; background-color: white;">
     <ng-container *ngFor="let data of tableData | keyvalue">
-        <tr><td style="background-color: #F5F5F5; font-weight: bold; line-height: 40px;">{{data.key}}</td></tr>
+        <tr><td style="background-color: #F5F5F5; font-weight: bold; line-height: 40px; padding-left: 10px;">{{data.key}}</td></tr>
         <tr>
             <td>
                 <table cellspacing="0" cellpadding="0" style="margin: 5px 20px;">
